--- a/ODK.Web.Razor/Pages/My/Groups/Group/Privacy.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Group/Privacy.cshtml
@@ -1,5 +1,7 @@
 ﻿@page "/my/groups/{id:guid}/privacy"
 @using ODK.Services.Chapters
+@using ODK.Web.Razor.Models.Admin
+@using ODK.Web.Razor.Models.Components
 @model ODK.Web.Razor.Pages.My.Groups.Group.PrivacyModel
 @inject IChapterAdminService ChapterAdminService
 @{
@@ -9,4 +11,12 @@
     var viewModel = await ChapterAdminService.GetChapterPrivacyViewModel(Model.AdminServiceRequest);
 }
 
-@await Html.PartialAsync("Admin/Chapter/_PrivacyContent", viewModel)
+@await Html.PartialAsync("Components/_TwoColLeftMenu", new TwoColLeftMenuViewModel
+{
+    Title = "Privacy",
+    BodyContentFunc = @<div>@await Html.PartialAsync("Admin/Chapter/_PrivacyContent", viewModel)</div>,
+    MenuContentFunc = _ => Html.PartialAsync("Admin/_AdminSideMenu", new AdminSideMenuViewModel
+    {
+        Chapter = viewModel.Chapter
+    })
+})
