--- a/ODK.Web.Razor/Pages/My/Groups/Group/Properties/Property.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Group/Properties/Property.cshtml
@@ -1,5 +1,7 @@
 ﻿@page "/my/groups/{id:guid}/properties/{propertyId:guid}"
 @using ODK.Services.Chapters
+@using ODK.Web.Razor.Models.Admin
+@using ODK.Web.Razor.Models.Components
 @model PropertyModel
 @inject IChapterAdminService ChapterAdminService
 @{
@@ -9,4 +11,12 @@
     var viewModel = await ChapterAdminService.GetChapterPropertyViewModel(Model.AdminServiceRequest, Model.PropertyId);
 }
 
-@await Html.PartialAsync("Admin/Chapter/_PropertyEditContent", viewModel)
+@await Html.PartialAsync("Components/_TwoColLeftMenu", new TwoColLeftMenuViewModel
+{
+    Title = "Edit property",
+    BodyContentFunc = @<div>@await Html.PartialAsync("Admin/Chapter/_PropertyEditContent", viewModel)</div>,
+    MenuContentFunc = _ => Html.PartialAsync("Admin/_AdminSideMenu", new AdminSideMenuViewModel
+    {
+        Chapter = viewModel.Chapter
+    })
+})
