--- a/ODK.Web.Razor/Pages/My/Groups/Group/Questions/Question.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Group/Questions/Question.cshtml
@@ -1,5 +1,7 @@
 ﻿@page "/my/groups/{id:guid}/questions/{questionId:guid}"
 @using ODK.Services.Chapters
+@using ODK.Web.Razor.Models.Admin
+@using ODK.Web.Razor.Models.Components
 @model ODK.Web.Razor.Pages.My.Groups.Group.Questions.QuestionModel
 @inject IChapterAdminService ChapterAdminService
 @{
@@ -9,4 +11,12 @@
     var viewModel = await ChapterAdminService.GetChapterQuestionViewModel(Model.AdminServiceRequest, Model.QuestionId);
 }
 
-@await Html.PartialAsync("Admin/Chapter/_QuestionEditContent", viewModel)
+@await Html.PartialAsync("Components/_TwoColLeftMenu", new TwoColLeftMenuViewModel
+{
+    Title = "Edit question",
+    BodyContentFunc = @<div>@await Html.PartialAsync("Admin/Chapter/_QuestionEditContent", viewModel)</div>,
+    MenuContentFunc = _ => Html.PartialAsync("Admin/_AdminSideMenu", new AdminSideMenuViewModel
+    {
+        Chapter = viewModel.Chapter
+    })
+})
