--- a/ODK.Web.Razor/Pages/Shared/_GroupAdminLayout.cshtml
+++ b/ODK.Web.Razor/Pages/Shared/_GroupAdminLayout.cshtml
@@ -20,15 +20,8 @@
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
-    Content = await Html.PartialAsync("Components/_TwoColLeftMenu", new TwoColLeftMenuViewModel
-    {
-        BodyContentFunc = _ => RenderBody(),
-        MenuContentFunc = _ => Html.PartialAsync("Admin/_AdminSideMenu", new AdminSideMenuViewModel
-        {
-            Chapter = chapter
-        })
-    }),
-    Title = chapter.Name
+    Title = chapter.Name,
+    ContentFunc = _ => RenderBody()
 })
 
 @section scripts
