--- a/ODK.Web.Razor/Pages/My/Groups/Group/Payments/Account.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Group/Payments/Account.cshtml
@@ -1,6 +1,8 @@
 ﻿@page "/my/groups/{id:guid}/payments/account"
 @using ODK.Services.Chapters
 @using ODK.Web.Common.Routes
+@using ODK.Web.Razor.Models.Admin
+@using ODK.Web.Razor.Models.Components
 @model ODK.Web.Razor.Pages.My.Groups.Group.Payments.AccountModel
 @inject IChapterAdminService ChapterAdminService
 @{
@@ -12,34 +14,43 @@
     var viewModel = await ChapterAdminService.GetChapterPaymentAccountViewModel(request);
 }
 
-<h2>Payment account</h2>
+@await Html.PartialAsync("Components/_TwoColLeftMenu", new TwoColLeftMenuViewModel
+{
+    Title = "Payment account",
+    BodyContentFunc = 
+        @<div>
+            <p>
+                Set up a payment account to take payments from your members.
+            </p>
 
-<p>
-    Set up a payment account to take payments from your members.
-</p>
-
-@if (!viewModel.HasPermission)
-{
-    <div class="alert alert-danger">
-        Upgrade your <a href="@OdkRoutes.Account.Subscription(platform, null)">subscription</a> to start accepting payments
-    </div>
-    return;
-}
-else if (viewModel.Enabled)
-{
-    var subscriptionsUrl = OdkRoutes.MemberGroups.MembersSubscriptions(Model.Platform, viewModel.Chapter);
-    <div class="alert alert-success">
-        You have set up a payment account. 
-        Set up your <a href="@subscriptionsUrl">memberships</a>.
-    </div>
-}
-else if (!string.IsNullOrEmpty(viewModel.OnboardingUrl))
-{    
-    <a href="@viewModel.OnboardingUrl">Resume setup</a>
-}
-else
-{
-    <form method="post">
-        <button class="btn btn-primary">Create</button>
-    </form>
-}
+            @if (!viewModel.HasPermission)
+            {
+                <div class="alert alert-danger">
+                    Upgrade your <a href="@OdkRoutes.Account.Subscription(platform, null)">subscription</a> to start accepting payments
+                </div>
+                return;
+            }
+            else if (viewModel.Enabled)
+            {
+                var subscriptionsUrl = OdkRoutes.MemberGroups.MembersSubscriptions(Model.Platform, viewModel.Chapter);
+                <div class="alert alert-success">
+                    You have set up a payment account. 
+                    Set up your <a href="@subscriptionsUrl">memberships</a>.
+                </div>
+            }
+            else if (!string.IsNullOrEmpty(viewModel.OnboardingUrl))
+            {    
+                <a href="@viewModel.OnboardingUrl">Resume setup</a>
+            }
+            else
+            {
+                <form method="post">
+                    <button class="btn btn-primary">Create</button>
+                </form>
+            }
+        </div>,
+    MenuContentFunc = _ => Html.PartialAsync("Admin/_AdminSideMenu", new AdminSideMenuViewModel
+    {
+        Chapter = viewModel.Chapter
+    })
+})
