--- a/ODK.Web.Razor/Pages/My/Groups/Group/Payments/Index.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Group/Payments/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@page "/my/groups/{id:guid}/payments"
 @using ODK.Services.Chapters
+@using ODK.Web.Razor.Models.Admin
+@using ODK.Web.Razor.Models.Components
 @model ODK.Web.Razor.Pages.My.Groups.Group.Payments.IndexModel
 @inject IChapterAdminService ChapterAdminService
 @{
@@ -9,4 +11,12 @@
     var viewModel = await ChapterAdminService.GetChapterPaymentSettingsViewModel(Model.AdminServiceRequest);
 }
 
-@await Html.PartialAsync("Admin/Chapter/_PaymentSettingsContent", viewModel)
+@await Html.PartialAsync("Components/_TwoColLeftMenu", new TwoColLeftMenuViewModel
+{
+    Title = "Payments",
+    BodyContentFunc = @<div>@await Html.PartialAsync("Admin/Chapter/_PaymentSettingsContent", viewModel)</div>,
+    MenuContentFunc = _ => Html.PartialAsync("Admin/_AdminSideMenu", new AdminSideMenuViewModel
+    {
+        Chapter = viewModel.Chapter
+    })
+})
