--- a/ODK.Web.Razor/Pages/Account/Create.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Create.cshtml
@@ -13,7 +13,7 @@
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
-    TitleContent = await Html.PartialAsync("Components/_SideMenuPageTitle", "Create account"),
+    Title = "Create account",
     WidthClass = "col-12 col-lg-8 col-xl-6",
     ContentFunc = 
         @<div>
