--- a/ODK.Web.Razor/Pages/Account/PasswordReset.cshtml
+++ b/ODK.Web.Razor/Pages/Account/PasswordReset.cshtml
@@ -10,7 +10,7 @@
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
-    TitleContent = await Html.PartialAsync("Components/_SideMenuPageTitle", "Reset password"),
+    Title = "Reset password",
     Breadcrumbs = new[]
     {
         new MenuItem { Link = "/account/login", Text = "Login" },
