--- a/ODK.Web.Razor/Pages/Account/Activate.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Activate.cshtml
@@ -9,7 +9,7 @@
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
-    TitleContent = await Html.PartialAsync("Components/_SideMenuPageTitle", "Activate your account"),
+    Title = "Activate your account",
     WidthClass = "col-12 col-md-8 col-lg-6 col-xl-4",
     Content = await Html.PartialAsync("Account/_ActivateContent", new ActivateFormViewModel())
 })
