--- a/ODK.Web.Razor/Pages/Account/Login.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Login.cshtml
@@ -13,7 +13,7 @@
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
-    TitleContent = await Html.PartialAsync("Components/_SideMenuPageTitle", "Login"),
+    Title = "Login",
     WidthClass = "col-12 col-md-8 col-lg-6 col-xl-4",
     Content = await Html.PartialAsync("Account/_SiteLoginContent", new LoginViewModel
     {
