--- a/ODK.Web.Razor/Views/Shared/Account/_UpdatePictureContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_UpdatePictureContent.cshtml
@@ -16,7 +16,7 @@
         </div>
 
         <div class="d-flex mt-3 gap-2">
-            <button class="btn btn-link p-0" type="button" data-bs-toggle="modal" data-bs-target="#change-picture-modal">
+            <button class="btn btn-link" type="button" data-bs-toggle="modal" data-bs-target="#change-picture-modal">
                 Change
             </button>
 
