--- a/ODK.Web.Razor/Views/Shared/Components/_FeatureTooltip.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_FeatureTooltip.cshtml
@@ -33,7 +33,7 @@
     <div class="d-none" data-popover-content>        
         <div>@Html.Raw(description)</div>
         <div class="d-flex justify-content-end">
-            <button class="btn btn-link p-0 btn-sm" data-feature-hidetip="@Model.Name" type="button">
+            <button class="btn btn-link btn-sm" data-feature-hidetip="@Model.Name" type="button">
                 Close
             </button>
         </div>
