--- a/ODK.Web.Razor/wwwroot/css/_buttons.scss
+++ b/ODK.Web.Razor/wwwroot/css/_buttons.scss
@@ -4,6 +4,11 @@
   padding: 0;
 }
 
+.btn-link {
+	align-content: center;
+	padding: 0;
+}
+
 .accordion .btn-link {
   padding: 0;
   text-align: left;
