--- a/ODK.Web.Razor/wwwroot/css/odk.css
+++ b/ODK.Web.Razor/wwwroot/css/odk.css
@@ -12035,6 +12035,11 @@ html[data-platform=odk] {
   padding: 0;
 }
 
+.btn-link {
+  align-content: center;
+  padding: 0;
+}
+
 .accordion .btn-link {
   padding: 0;
   text-align: left;
