--- a/ODK.Web.Razor/Pages/Account/SubscriptionCheckout.cshtml
+++ b/ODK.Web.Razor/Pages/Account/SubscriptionCheckout.cshtml
@@ -21,6 +21,7 @@
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
+    Title = "Account",
     HideSubscriptionAlert = true,
     Content = await Html.PartialAsync("Account/_SiteAccountLayout", new SiteAccountLayoutViewModel
     {
