--- a/ODK.Web.Razor/Pages/Account/ChangePassword.cshtml
+++ b/ODK.Web.Razor/Pages/Account/ChangePassword.cshtml
@@ -12,6 +12,7 @@
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
+    Title = "Account",
     Content = await Html.PartialAsync("Account/_SiteAccountLayout", new SiteAccountLayoutViewModel
     {
         Active = "/Account/Password/Change",
