--- a/ODK.Web.Razor/Pages/Account/Delete.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Delete.cshtml
@@ -13,6 +13,7 @@
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
+    Title = "Account",
     Content = await Html.PartialAsync("Account/_SiteAccountLayout", new SiteAccountLayoutViewModel
     {
         Active = OdkRoutes.Account.Delete(null),
