--- a/ODK.Web.Razor/Pages/Account/Payments.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Payments.cshtml
@@ -16,6 +16,7 @@
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
+    Title = "Account",
     Content = await Html.PartialAsync("Account/_SiteAccountLayout", new SiteAccountLayoutViewModel
     {
         Active = OdkRoutes.Account.Payments(null),
