--- a/ODK.Web.Razor/Views/Shared/Components/_Panel.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_Panel.cshtml
@@ -3,9 +3,19 @@
 
 <section class="panel" data-odk-component="_Panel">
     <div class="panel-header">
-        <div class="panel-title">
-            @Model.TitleContentFunc.Invoke(null)
-        </div>
+        
+        @if (Model.TitleContentFunc != null) 
+        {
+            <div class="panel-title">
+                @Model.TitleContentFunc.Invoke(null)
+            </div>
+        }
+        else if (!string.IsNullOrEmpty(Model.Title))
+        {
+            <div class="panel-title">
+                @Model.Title
+            </div>
+        }
 
         @if (Model.TitleEndContentFunc != null)
         {
